--- a/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
@@ -81,17 +81,34 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZCi-5G-Dq5" customClass="IBDesignableButton" customModule="Collections" customModuleProvider="target">
+                                <rect key="frame" x="267.5" y="680" width="86" height="40"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                <state key="normal" title="ログイン">
+                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JQ1-y2-NAh" secondAttribute="trailing" constant="56" id="1Zi-U5-AXQ"/>
+                            <constraint firstItem="ZCi-5G-Dq5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1.5" id="BOa-73-zVz"/>
                             <constraint firstItem="JQ1-y2-NAh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="U82-hF-t4R"/>
                             <constraint firstItem="JQ1-y2-NAh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vND-9r-DhF"/>
+                            <constraint firstItem="ZCi-5G-Dq5" firstAttribute="top" secondItem="bMa-gU-6jb" secondAttribute="bottom" constant="56" id="wbt-cY-NOI"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="Trg-hS-WGg" id="Wba-Cf-Meb"/>
+                        <outlet property="loginButton" destination="ZCi-5G-Dq5" id="HvY-XB-XuS"/>
                         <outlet property="passwordConfirmationTextField" destination="Leu-f1-mfE" id="zqb-q2-raP"/>
                         <outlet property="passwordTextField" destination="BS3-2F-isb" id="VY1-1m-xBH"/>
                         <outlet property="secureTextChangeButton" destination="YGP-JC-Ey3" id="5gj-9s-MSK"/>
@@ -114,6 +131,9 @@
         <designable name="Trg-hS-WGg">
             <size key="intrinsicContentSize" width="114.5" height="21"/>
         </designable>
+        <designable name="ZCi-5G-Dq5">
+            <size key="intrinsicContentSize" width="86" height="40"/>
+        </designable>
         <designable name="bMa-gU-6jb">
             <size key="intrinsicContentSize" width="115" height="32"/>
         </designable>
@@ -122,6 +142,9 @@
         <image name="Check_Off_Box" width="15" height="15"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
