--- a/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
@@ -95,6 +95,10 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Vgx-H0-VTq">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                                <color key="color" systemColor="systemGrayColor"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -102,12 +106,15 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JQ1-y2-NAh" secondAttribute="trailing" constant="56" id="1Zi-U5-AXQ"/>
                             <constraint firstItem="ZCi-5G-Dq5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1.5" id="BOa-73-zVz"/>
                             <constraint firstItem="JQ1-y2-NAh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="U82-hF-t4R"/>
+                            <constraint firstItem="Vgx-H0-VTq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oy8-Gw-rz4"/>
+                            <constraint firstItem="Vgx-H0-VTq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rC0-H0-zbP"/>
                             <constraint firstItem="JQ1-y2-NAh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vND-9r-DhF"/>
                             <constraint firstItem="ZCi-5G-Dq5" firstAttribute="top" secondItem="bMa-gU-6jb" secondAttribute="bottom" constant="56" id="wbt-cY-NOI"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="Trg-hS-WGg" id="Wba-Cf-Meb"/>
+                        <outlet property="loadingIndicator" destination="Vgx-H0-VTq" id="Frt-rw-IW6"/>
                         <outlet property="loginButton" destination="ZCi-5G-Dq5" id="HvY-XB-XuS"/>
                         <outlet property="passwordConfirmationTextField" destination="Leu-f1-mfE" id="zqb-q2-raP"/>
                         <outlet property="passwordTextField" destination="BS3-2F-isb" id="VY1-1m-xBH"/>
@@ -142,6 +149,9 @@
         <image name="Check_Off_Box" width="15" height="15"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
