追加: バリデーション（パスワード）

--- a/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="48" translatesAutoresizingMaskIntoConstraints="NO" id="JQ1-y2-NAh">
-                                <rect key="frame" x="56" y="272" width="302" height="352"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="JQ1-y2-NAh">
+                                <rect key="frame" x="56" y="288" width="302" height="320"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="メールアドレス" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Trg-hS-WGg" customClass="BorderBottomTextField" customModule="Collections" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="302" height="32"/>
@@ -29,7 +29,7 @@
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="パスワード" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BS3-2F-isb" customClass="BorderBottomTextField" customModule="Collections" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="80" width="302" height="32"/>
+                                        <rect key="frame" x="0.0" y="64" width="302" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="llw-DF-heF"/>
                                         </constraints>
@@ -37,7 +37,7 @@
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="パスワード確認" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Leu-f1-mfE" customClass="BorderBottomTextField" customModule="Collections" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="160" width="302" height="32"/>
+                                        <rect key="frame" x="0.0" y="128" width="302" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="qlE-eT-pmB"/>
                                         </constraints>
@@ -45,7 +45,7 @@
                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7UE-af-SD8">
-                                        <rect key="frame" x="0.0" y="240" width="302" height="24"/>
+                                        <rect key="frame" x="0.0" y="192" width="302" height="24"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGP-JC-Ey3">
                                                 <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
@@ -63,8 +63,14 @@
                                             </label>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0V-IC-vay">
+                                        <rect key="frame" x="0.0" y="248" width="302" height="0.0"/>
+                                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="12"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bMa-gU-6jb" customClass="IBDesignableButton" customModule="Collections" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="312" width="302" height="40"/>
+                                        <rect key="frame" x="0.0" y="280" width="302" height="40"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="eRy-as-73E"/>
@@ -82,7 +88,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZCi-5G-Dq5" customClass="IBDesignableButton" customModule="Collections" customModuleProvider="target">
-                                <rect key="frame" x="267.5" y="680" width="86" height="40"/>
+                                <rect key="frame" x="267.5" y="664" width="86" height="40"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
@@ -121,6 +127,7 @@
                         <outlet property="secureTextChangeButton" destination="YGP-JC-Ey3" id="5gj-9s-MSK"/>
                         <outlet property="signupButton" destination="bMa-gU-6jb" id="rpJ-ZA-RHh"/>
                         <outlet property="stackView" destination="JQ1-y2-NAh" id="0Fw-jo-wKl"/>
+                        <outlet property="validateLabel" destination="l0V-IC-vay" id="ase-Mo-LYR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -155,6 +162,9 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
