--- a/Collections/Presentation/Presentation-Domain/Screen/BookList/View/BookListTableViewCell.xib
+++ b/Collections/Presentation/Presentation-Domain/Screen/BookList/View/BookListTableViewCell.xib
@@ -18,19 +18,19 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yeu-Me-T7M">
-                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                        <rect key="frame" x="10" y="10" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Yeu-Me-T7M" secondAttribute="height" multiplier="1:1" id="aFj-zR-F9p"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6x-qE-cfp">
-                        <rect key="frame" x="116" y="16" width="73.5" height="21.5"/>
+                        <rect key="frame" x="106" y="16" width="73.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="italicSystem" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="購入日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="98C-W8-aG2">
-                        <rect key="frame" x="116" y="61.5" width="49" height="19.5"/>
+                        <rect key="frame" x="106" y="61.5" width="49" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -48,9 +48,9 @@
                     <constraint firstItem="98C-W8-aG2" firstAttribute="leading" secondItem="Yeu-Me-T7M" secondAttribute="trailing" constant="16" id="OsU-hm-q8K"/>
                     <constraint firstItem="98C-W8-aG2" firstAttribute="top" secondItem="c6x-qE-cfp" secondAttribute="bottom" constant="24" id="QK2-WT-mbv"/>
                     <constraint firstItem="c6x-qE-cfp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="UAc-uA-WW4"/>
-                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="XFq-AO-Crk"/>
-                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hrR-Qh-fne"/>
-                    <constraint firstAttribute="bottom" secondItem="Yeu-Me-T7M" secondAttribute="bottom" id="inu-gg-ayP"/>
+                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XFq-AO-Crk"/>
+                    <constraint firstItem="Yeu-Me-T7M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hrR-Qh-fne"/>
+                    <constraint firstAttribute="bottom" secondItem="Yeu-Me-T7M" secondAttribute="bottom" constant="10" id="inu-gg-ayP"/>
                     <constraint firstItem="c6x-qE-cfp" firstAttribute="leading" secondItem="Yeu-Me-T7M" secondAttribute="trailing" constant="16" id="zRG-bx-ehz"/>
                 </constraints>
             </tableViewCellContentView>
